wip minor gap fix

--- a/index.scss
+++ b/index.scss
@@ -389,19 +389,20 @@ body {
       }
     }
 
-    .link mark.search-highlight {
-      background: var(--colorTextLink);
-      color: var(--colorBgMain);
-      padding: 1px 2px;
-      border-radius: 2px;
-      font-weight: var(--fontWeightBold);
-    }
-
-    .link.navigating {
-      opacity: 0.7;
-      background: var(--colorBgHover);
-      border-color: var(--colorBorderMain);
-      box-shadow: inset 0 0 0 2px var(--colorBorderMain);
+    .link{
+      &.navigating {
+        opacity: 0.7;
+        background: var(--colorBgHover);
+        border-color: var(--colorBorderMain);
+        box-shadow: inset 0 0 0 2px var(--colorBorderMain);
+      }
+      mark.search-highlight {
+        background: var(--colorTextLink);
+        color: var(--colorBgMain);
+        padding: 1px 2px;
+        border-radius: 2px;
+        font-weight: var(--fontWeightBold);
+      }
     }
   }
 
